--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@aws-sdk/client-cloudfront": "^3.290.0",
     "@aws-sdk/client-s3": "^3.290.0",
+    "@types/redis": "^4.0.10",
     "agora-access-token": "^2.0.4",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
@@ -39,6 +40,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "puppeteer": "^21.11.0",
+    "redis": "^4.7.0",
     "socket.io": "^4.7.2",
     "stripe": "^12.18.0",
     "xlsx": "^0.18.5"
