--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: "3.8"
-
 services:
   redis:
     image: redis:alpine
-    container_name: task-redis
+    container_name: redis
+    restart: always
     ports:
       - "6379:6379"
+    command: ["redis-server", "--appendOnly", "yes"]
     volumes:
       - redis_data:/data
     healthcheck:
@@ -14,15 +14,26 @@ services:
       timeout: 3s
       retries: 3
 
+  mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
+
   app:
     build: .
     ports:
-      - "3000:3000"
+      - "5000:5000"
     depends_on:
-      redis:
-        condition: service_healthy
+      - mongo # Ensure mongo is up before the app starts
     environment:
-      - REDIS_URL=redis://redis:6379
+      - MONGO_URI=mongodb://mongo:27017/ # Add this to pass the connection string
+    env_file:
+      - .env
+    volumes:
+      - .:/app
+      - node_modules:/app/node_modules
+    command: ["npm", "run", "dev"]
 
 volumes:
   redis_data:
+  node_modules:
