--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@aws-sdk/client-cloudfront": "^3.290.0",
     "@aws-sdk/client-s3": "^3.290.0",
     "@types/redis": "^4.0.10",
-    "agora-access-token": "^2.0.4",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -28,7 +27,6 @@
     "express-validator": "^6.14.2",
     "firebase-admin": "^11.0.0",
     "fs": "^0.0.1-security",
-    "googleapis": "^122.0.0",
     "http-errors": "^2.0.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.0",
@@ -36,14 +34,9 @@
     "moment": "^2.29.4",
     "mongoose": "^6.6.1",
     "node-fetch": "^2.6.7",
-    "nodemailer": "^6.7.5",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "puppeteer": "^21.11.0",
+    "nodemailer": "^6.10.1",
     "redis": "^4.7.0",
-    "socket.io": "^4.7.2",
-    "stripe": "^12.18.0",
-    "xlsx": "^0.18.5"
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
