--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/client-s3": "^3.290.0",
     "@types/redis": "^4.0.10",
     "bcryptjs": "^3.0.2",
+    "chai": "^5.2.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -36,6 +37,7 @@
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.10.1",
     "redis": "^4.7.0",
+    "sinon": "^20.0.0",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
